--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: swift
-
 osx_image: xcode7.1
+sudo: false
+
+script:
+	- xcodebuild -workspace DNMKit.xcworkspace -scheme DNMModel -sdk iphonesimulator
