--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: swift
 osx_image: xcode7.1
-sudo: required
+sudo: false
 
 script:
 - xctool -workspace DNMKit.xcworkspace -scheme DNMModel -sdk iphonesimulator
