--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
-language: swift
+language: objective-c
 osx_image: xcode7.1
 sudo: false
 
-script:
-- xctool -workspace DNMKit.xcworkspace -scheme DNMModel -sdk iphonesimulator
+xcode_workspace: DNMKit
+xcode_scheme: DNMModel
+xcode_sdk: iphonesimulator9.1
