--- a/DNM Text Editor/DNM Text Editor.xcodeproj/xcshareddata/xcschemes/DNM Text Editor.xcscheme
+++ b/DNM Text Editor/DNM Text Editor.xcodeproj/xcshareddata/xcschemes/DNM Text Editor.xcscheme
@@ -3,9 +3,23 @@
    LastUpgradeVersion = "0720"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "YES"
+      parallelizeBuildables = "NO"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "071E9E3F1C00EC96008D1263"
+               BuildableName = "DNMModel.framework"
+               BlueprintName = "DNMModel_OSX"
+               ReferencedContainer = "container:../DNMModel/DNMModel.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
