--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ osx_image: xcode7.2b3
 sudo: false
 
 xcode_workspace: DNM.xcworkspace
-xcode_scheme: DNMModel_iOS
-xcode_sdk: iphonesimulator9.2
+xcode_scheme: DNM_iOS
+xcode_sdk: iphonesimulator9.1
