--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: objective-c
 osx_image: xcode7.2b3
-sudo: false
+# sudo: false
 
 xcode_workspace: DNM.xcworkspace
-xcode_scheme: DNM_iOS
-xcode_sdk: iphoneos9.1
+xcode_scheme: DNMModel_iOS
+xcode_sdk: iphonesimulator9.1
