--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: objective-c
-osx_image: xcode7.2b3
-# sudo: false
+osx_image: xcode7.1
+sudo: false
 
 xcode_workspace: DNM.xcworkspace
 xcode_scheme: DNMModel_iOS
